- actually fixed white space issue

--- a/main.css
+++ b/main.css
@@ -87,16 +87,10 @@ body {
     display: flex; 
     justify-content: center;
     align-items: center;
-    overflow-x: hidden;
-}
-
-.productLSpace {
-    margin: 0px;
-    padding: 0px;
 }
 
 .productSpace {
-    margin-bottom: 90px;
+    margin-bottom: 80px;
 }
 
 /* Domestic */
@@ -106,7 +100,7 @@ body {
     font-style: italic;
     color: #FFFFFF;
     position: absolute;
-    top: 480px;
+    top: 380px;
     left: 120px;
     text-shadow: 0px 100px 80px rgba(0, 0, 0, 0.29), 
     0px 41.7776px 33.4221px rgba(0, 0, 0, 0.314091), 
@@ -114,6 +108,11 @@ body {
     0px 12.5216px 10.0172px rgba(0, 0, 0, 0.341926), 
     0px 6.6501px 5.32008px rgba(0, 0, 0, 0.509452), 
     0px 2.76726px 2.21381px rgba(0, 0, 0, 0.9557196);
+}
+
+#hpDomestic {
+    max-width: 350px;
+    max-height: 460px;
 }
 
 /* Cocktails */
@@ -125,6 +124,7 @@ body {
     position: absolute;
     top: 305px;
     left: 115px;
+    overflow-x: visible;
     text-shadow: 0px 100px 80px rgba(0, 0, 0, 0.29), 
     0px 41.7776px 33.4221px rgba(0, 0, 0, 0.314091), 
     0px 22.3363px 17.869px rgba(0, 0, 0, 0.535849), 
